--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
 <header>
-  <div class="row m-5 text-light">
-    <div class="offset-lg-2 col-lg-4 d-flex justify-content-center align-items-center">
+  <div class="row m-5 text-light w-75 m-auto">
+    <div class="col-lg-6 d-flex justify-content-center align-items-center p-5">
       <img src="./assets/perfil.jpg" alt="Adrián Sanz" class="w-50 rounded-circle">
     </div>
-    <div class="col-lg-4 d-flex justify-content-center flex-column p-5">
+    <div class="col-lg-6 d-flex justify-content-center text-center flex-column p-lg-5">
       <h1 class="display-1">Adrián Sanz</h1>
-      <h2 class="display-6">Desarrollador Full-Stack | Java, Spring y Angular</h2>
+      <h2 class="display-6">Desarrollador Full-Stack</h2>
       <h3>Madrid y alrededores, España.</h3>
       <div class="pt-2">
         <p><i class="fas fa-envelope"></i> Email: <a href="mailto:sanzadrian@hotmail.es"
