--- a/src/app/layout/estructura/estructura.component.html
+++ b/src/app/layout/estructura/estructura.component.html
@@ -2,3 +2,4 @@
 <app-sobre-mi></app-sobre-mi>
 <app-tecnologias></app-tecnologias>
 <app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
