Actualizado el componente 'Header' para mejorar la legibilidad del texto al añadir la clase 'lead' al contenedor de información de contacto.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
       <h1 class="display-1">Adrián Sanz</h1>
       <h2 class="display-6">Desarrollador Full-Stack</h2>
       <h3>Madrid y alrededores, España.</h3>
-      <div class="pt-2">
+      <div class="pt-2 lead">
         <p><i class="fas fa-envelope"></i> Email: <a href="mailto:sanzadrian@hotmail.es"
             class="contact-link text-decoration-none">{{email}}</a></p>
         <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/sanzadrian"
