Añadido componente 'Footer' con su plantilla, estilos y pruebas unitarias, y actualizado el layout para incluirlo.

--- a/src/app/layout/estructura/estructura.component.html
+++ b/src/app/layout/estructura/estructura.component.html
@@ -3,3 +3,4 @@
 <app-tecnologias></app-tecnologias>
 <app-experiencia></app-experiencia>
 <app-educacion></app-educacion>
+<app-footer></app-footer>
