--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
 <app-estructura></app-estructura>
+<div class="cursor-glow" [ngStyle]="{'left.px': x, 'top.px': y}"></div>
+<div class="cursor-glow2" [ngStyle]="{'left.px': x, 'top.px': y}"></div>
