Añadido componente de gráfico de actividad de GitHub con estilos y efectos de hover para mejorar la presentación visual.

--- a/src/app/components/sobre-mi/sobre-mi.component.html
+++ b/src/app/components/sobre-mi/sobre-mi.component.html
@@ -16,6 +16,11 @@
           habilidades técnicas y contribuir al éxito del equipo. Comprometido con el aprendizaje constante y la mejora
           continua para estar al día con las últimas tendencias tecnológicas.
         </p>
+        <div class=" github-calendar text-center my-5">
+          <a href="https://github.com/adrianssanz" target="_blank">
+            <img src="https://ghchart.rshah.org/1d3883/adrianssanz" alt="Github activity chart">
+          </a>
+        </div>
       </div>
     </div>
   </div>
