Añadido componente 'LayoutProyectos' y actualizado el enrutamiento para incluir nuevas rutas, reemplazando el componente de estructura en la vista principal.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-estructura></app-estructura>
+<router-outlet></router-outlet>
 <div class="cursor-glow" [ngStyle]="{'left.px': x, 'top.px': y}"></div>
 <div class="cursor-glow2" [ngStyle]="{'left.px': x, 'top.px': y}"></div>
