--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -5,13 +5,13 @@
     </div>
   </div>
   <div *ngFor="let empresa of empresas" class="w-75 m-auto text-light">
-    <div class="row linea mb-5">
+    <div class="row  mb-5 ">
       <div class="col-lg-4 d-flex justify-content-center align-items-center">
-        <a [href]="empresa.web" target="_blank" class="img-fluid w-50 empresa">
-          <img [src]="empresa.src" [alt]="empresa.alt" class="img-fluid empresa">
+        <a [href]="empresa.web" target="_blank" class="img-fluid w-50 ampliar-logo">
+          <img [src]="empresa.src" [alt]="empresa.alt" class="img-fluid ampliar-logo">
       </a>
       </div>
-      <div class="col-lg-8 px-5">
+      <div class="col-lg-8 px-5 linea ampliar">
         <h3 class="h1">{{empresa.empresa}}</h3>
         <h4 class="lead">{{empresa.puesto}}</h4>
         <h4 class="lead">{{empresa.duracion}}</h4>
