--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
 <router-outlet></router-outlet>
+<div class="sidebar d-flex flex-column justify-content-center align-items-center d-none d-lg-flex"> 
+    <a class="h2 text-light ampliar" href="mailto:sanzadrian@hotmail.es" target="_blank">
+        <i class="fas fa-envelope mb-3"></i>
+    </a>
+    <a class="h2 text-light ampliar" href="https://github.com/adrianssanz" target="_blank">
+        <i class="fab fa-github mb-3"></i>
+    </a>
+    <a class="h2 text-light ampliar" href="https://www.linkedin.com/in/sanzadrian/" target="_blank">
+        <i class="fab fa-linkedin mb-3"></i>
+    </a>
+</div>
 <div class="cursor-glow" [ngStyle]="{'left.px': x, 'top.px': y}"></div>
 <div class="cursor-glow2" [ngStyle]="{'left.px': x, 'top.px': y}"></div>
