--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,16 @@
 <footer class="text-center mb-5">
-    <img (click)="scrollToTop()" src="assets/logo.png" class="img-fluid logo">
+    <img (click)="scrollToTop()" src="assets/logo.png" class="img-fluid ampliar-logo">
     <p class="lead text-light">Diseñado por <a href="https://github.com/adrianssanz" class="text-decoration-none">github.com/adrianssanz</a></p>
+    <div class="justify-content-center gap-5 d-flex d-lg-none mb-3">
+        <a class="h2 text-light ampliar" href="mailto:sanzadrian@hotmail.es" target="_blank">
+            <i class="fas fa-envelope"></i>
+        </a>
+        <a class="h2 text-light ampliar" href="https://github.com/adrianssanz" target="_blank">
+            <i class="fab fa-github"></i>
+        </a>
+        <a class="h2 text-light ampliar-logo" href="https://www.linkedin.com/in/sanzadrian/" target="_blank">
+            <i class="fab fa-linkedin"></i>
+        </a>
+    </div>
     <p class="text-secondary">&copy; 2025</p>
 </footer>
