Actualizada la sección de educación: se cambió el título, se ajustaron los estilos y se añadieron ubicaciones. Mejorada la sección de experiencia con cambios similares. Se eliminaron estilos innecesarios y se optimizó el CSS.

--- a/src/app/components/sobre-mi/sobre-mi.component.html
+++ b/src/app/components/sobre-mi/sobre-mi.component.html
@@ -4,17 +4,15 @@
       <h2 class="display-3">Sobre mi:</h2><br>
       <div>
         <p class="lead">
-          Técnico Superior en Desarrollo de Aplicaciones Web recién graduado, con sólida formación en front-end y
-          back-end.
-          Enfocado en el desarrollo de soluciones completas, combinando un enfoque práctico y eficiente con un
-          aprendizaje
-          continuo para ofrecer resultados de alta calidad.
+          Técnico Superior en <strong>Desarrollo de Aplicaciones Web</strong> recién graduado, con formación en
+          <strong>front-end</strong> y <strong>back-end</strong>. Enfocado en soluciones completas, combinando un
+          enfoque práctico y eficiente con aprendizaje continuo para ofrecer resultados de alta calidad.
         </p>
         <br>
         <p class="lead">
-          Apasionado por colaborar en proyectos que demandan soluciones innovadoras, siempre buscando mejorar mis
-          habilidades técnicas y contribuir al éxito del equipo. Comprometido con el aprendizaje constante y la mejora
-          continua para estar al día con las últimas tendencias tecnológicas.
+          Apasionado por proyectos que demandan <span class="text-light-blue">soluciones innovadoras</span>, siempre
+          mejorando mis habilidades técnicas y contribuyendo al éxito del equipo. Comprometido con el aprendizaje
+          constante y la mejora continua para estar al día con las últimas tendencias tecnológicas.
         </p>
         <div class=" github-calendar text-center my-5">
           <a href="https://github.com/adrianssanz" target="_blank">
