--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,20 +1,21 @@
 <section>
     <div class="row m-5 text-light">
       <div class="offset-lg-2 col-lg-8">
-        <h2 class="display-3">Experiencia:</h2>
+        <h2 class="display-3">Educación:</h2>
       </div>
     </div>
-    <div *ngFor="let educacion of educaciones" class="w-75 m-auto text-light ">
+    <div *ngFor="let educacion of educaciones" class="w-80 m-auto text-light ">
       <div class="row mb-5">
-        <div class="col-lg-4 d-flex justify-content-center align-items-center">
+        <div class="col-lg-3 d-flex justify-content-center align-items-center">
         <a [href]="educacion.web" target="_blank" class="img-fluid w-50 ampliar-logo">
             <img [src]="educacion.src" [alt]="educacion.alt" class="img-fluid ampliar-logo">
         </a>
         </div>
-        <div class="col-lg-8 px-5 linea ampliar">
+        <div class="col-lg-9 ampliar">
           <h3 class="h1">{{educacion.institucion}}</h3>
           <h4 class="lead">{{educacion.titulo}}</h4>
-          <h4 class="lead">{{educacion.duracion}}</h4>
+          <h4 class="lead text-secondary">{{educacion.ubicacion}}</h4>
+          <h4 class="lead text-secondary">{{educacion.duracion}}</h4>
           <hr>
           <p class="lead" [innerHTML]="educacion.descripcion | formatDescripcion"></p>
         </div>
