--- a/src/app/layout/layout-proyectos/layout-proyectos.component.html
+++ b/src/app/layout/layout-proyectos/layout-proyectos.component.html
@@ -1,1 +1,39 @@
-<p>layout-proyectos works!</p>
+<div class="min-vh-100 d-flex flex-column">
+  <div class="d-flex flex-column align-items-center justify-content-center text-light p-5">
+    <h2 class="display-3">Mis Proyectos:</h2>
+    <a routerLink="/" class="volver-inicio text-decoration-none mt-3">Volver al inicio</a>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div *ngFor="let proyecto of proyectos" class="col-lg-6 mb-5 text-light d-flex flex-column">
+        <div class="p-4 ampliar flex-grow-1 d-flex flex-column">
+          <h3 class="h1">{{proyecto.titulo}}</h3>
+          <h4 class="lead">{{proyecto.duracion}}</h4>
+          <hr>
+          <p class="lead">{{proyecto.descripcion}}</p>
+          <div class="d-flex flex-wrap mt-auto">
+            <span *ngFor="let tecnologia of proyecto.tecnologias"
+              class="badge bg-primary p-2 m-1">{{tecnologia}}</span>
+          </div>
+          <p class="lead mt-auto">
+            <i class="fab fa-github"></i> <a [href]="proyecto.repositorio[0]" class="text-decoration-none"
+              target="_blank"> Repositorio de GitHub</a>
+            <br>
+            <i *ngIf="proyecto.repositorio.length > 1" class="fab fa-github"></i>
+            <a *ngIf="proyecto.repositorio.length > 1" [href]="proyecto.repositorio[1]" class="text-decoration-none"
+              target="_blank"> Repositorio de
+              GitHub 2 <br></a>
+
+            <i *ngIf="proyecto.demo" class="fas fa-gamepad"></i> <a *ngIf="proyecto.demo" [href]="proyecto.demo"
+              class="text-decoration-none" target="_blank"> Aplicación Web</a>
+          </p>
+          <img [src]="proyecto.src" alt="{{proyecto.alt}}" class="img-fluid mt-3">
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr class="w-75 mt-5 m-auto border-3 border-white">
+  <div class="mt-auto">
+    <app-footer></app-footer>
+  </div>
+</div>
