Actualizado el pie de página para reflejar el desarrollo en Angular y ajustados los márgenes en la sección "Sobre mí".

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="text-center mb-5">
     <img (click)="scrollToTop()" src="assets/logo.png" class="img-fluid ampliar-logo">
-    <p class="lead text-light">Diseñado por <a href="https://github.com/adrianssanz" class="text-decoration-none">github.com/adrianssanz</a></p>
+    <p class="lead text-light">Desarrollado en <i class="fa-brands fa-angular"></i> por<br><a href="https://github.com/adrianssanz" class="text-decoration-none">github.com/adrianssanz</a></p>
     <div class="justify-content-center gap-5 d-flex d-lg-none mb-3">
         <a class="h2 text-light ampliar" href="mailto:sanzadrian@hotmail.es" target="_blank">
             <i class="fas fa-envelope"></i>
