--- a/src/app/components/sobre-mi/sobre-mi.component.html
+++ b/src/app/components/sobre-mi/sobre-mi.component.html
@@ -14,7 +14,7 @@
           mejorando mis habilidades técnicas y contribuyendo al éxito del equipo. Comprometido con el aprendizaje
           constante y la mejora continua para estar al día con las últimas tendencias tecnológicas.
         </p>
-        <div class=" github-calendar text-center my-5">
+        <div class=" github-calendar text-center mt-5">
           <a href="https://github.com/adrianssanz" target="_blank">
             <img src="https://ghchart.rshah.org/1d3883/adrianssanz" alt="Github activity chart">
           </a>
