--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,26 +1,30 @@
 <section>
-    <div class="row m-5 text-light">
-      <div class="offset-lg-2 col-lg-8">
-        <h2 class="display-3">Educación:</h2>
-      </div>
-    </div>
-    <div *ngFor="let educacion of educaciones" class="w-80 m-auto text-light ">
-      <div class="row mb-5">
-        <div class="col-lg-3 d-flex justify-content-center align-items-center">
+  <div class="row m-5 text-light">
+    <div class="offset-lg-2 col-lg-8">
+      <h2 class="display-3">Educación:</h2>
+  </div>
+  <div *ngIf="educaciones && educaciones.length > 0; else noEducacion" class="w-80 m-auto text-light ">
+    <div *ngFor="let educacion of educaciones" class="row mb-5">
+      <div class="col-lg-3 d-flex justify-content-center align-items-center">
         <a [href]="educacion.web" target="_blank" class="img-fluid w-50 ampliar-logo">
-            <img [src]="educacion.src" [alt]="educacion.alt" class="img-fluid ampliar-logo">
+          <img [src]="educacion.src" [alt]="educacion.alt" class="img-fluid ampliar-logo">
         </a>
-        </div>
-        <div class="col-lg-9 ampliar">
-          <h3 class="h1">{{educacion.institucion}}</h3>
-          <h4 class="lead">{{educacion.titulo}}</h4>
-          <h4 class="lead text-secondary">{{educacion.ubicacion}}</h4>
-          <h4 class="lead text-secondary">{{educacion.duracion}}</h4>
-          <hr>
-          <p class="lead" [innerHTML]="educacion.descripcion | formatDescripcion"></p>
-        </div>
+      </div>
+      <div class="col-lg-9 ampliar">
+        <h3 class="h1">{{educacion.institucion}}</h3>
+        <h4 class="lead">{{educacion.titulo}}</h4>
+        <h4 class="lead text-secondary">{{educacion.ubicacion}}</h4>
+        <h4 class="lead text-secondary">{{educacion.duracion}}</h4>
+        <hr>
+        <p class="lead" [innerHTML]="educacion.descripcion | formatDescripcion"></p>
       </div>
     </div>
-    <hr class="w-75 mt-5 m-auto border-3 border-white">
-  </section>
-  
+  </div>
+  <ng-template #noEducacion>
+    <div class="text-center text-light p-5 lead display-6">
+      <p>No hay datos de educación disponibles.</p>
+    </div>
+  </ng-template>
+  </div>
+  <hr class="w-75 mt-5 m-auto border-3 border-white">
+</section>
