--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -6,32 +6,39 @@
   </div>
   <div class="w-75 m-auto text-light">
     <!-- DOS PRIMEROS PROYECTOS -->
-    <div class="row mb-5 d-flex">
-      <div *ngFor="let proyecto of proyectos.slice(0, 2)" class="col-lg-6 p-3 ampliar d-flex flex-column">
-        <h3 class="h1">{{proyecto.titulo}}</h3>
-        <h4 class="lead">{{proyecto.duracion}}</h4>
-        <hr>
-        <p class="lead">{{proyecto.descripcion}}</p>
-        <div class="d-flex flex-wrap mt-auto">
-          <span *ngFor="let tecnologia of proyecto.tecnologias" class="badge bg-primary p-2 m-1">{{tecnologia}}</span>
+    <div *ngIf="proyectos && proyectos.length > 0; else noProyectos" class="w-80 m-auto text-light ">
+      <div class="row mb-5 d-flex">
+        <div *ngFor="let proyecto of proyectos.slice(0, 2)" class="col-lg-6 p-3 ampliar d-flex flex-column">
+          <h3 class="h1">{{proyecto.titulo}}</h3>
+          <h4 class="lead">{{proyecto.duracion}}</h4>
+          <hr>
+          <p class="lead">{{proyecto.descripcion}}</p>
+          <div class="d-flex flex-wrap mt-auto">
+            <span *ngFor="let tecnologia of proyecto.tecnologias" class="badge bg-primary p-2 m-1">{{tecnologia}}</span>
+          </div>
+          <p class="lead mt-auto">
+            <i class="fab fa-github"></i> <a [href]="proyecto.repositorio[0]" class="contact-link text-decoration-none"
+              target="_blank"> Repositorio de GitHub</a><br>
+            <i *ngIf="proyecto.repositorio.length > 1" class="fab fa-github"></i>
+            <a *ngIf="proyecto.repositorio.length > 1" [href]="proyecto.repositorio[1]" class="text-decoration-none"
+              target="_blank"> Repositorio de
+              GitHub 2 <br></a>
+            <i *ngIf="proyecto.demo" class="fas fa-gamepad"></i> <a *ngIf="proyecto.demo" [href]="proyecto.demo"
+              class="text-decoration-none" target="_blank"> Aplicación Web</a>
+          </p>
+          <img [src]="proyecto.src" alt="{{proyecto.alt}}" class="img-fluid mt-3">
         </div>
-        <p class="lead mt-auto">
-          <i class="fab fa-github"></i> <a [href]="proyecto.repositorio[0]"
-        class="contact-link text-decoration-none" target="_blank"> Repositorio de GitHub</a><br>
-          <i *ngIf="proyecto.repositorio.length > 1" class="fab fa-github"></i>
-          <a *ngIf="proyecto.repositorio.length > 1" [href]="proyecto.repositorio[1]"
-        class="text-decoration-none" target="_blank"> Repositorio de
-        GitHub 2 <br></a>
-          <i *ngIf="proyecto.demo" class="fas fa-gamepad"></i> <a *ngIf="proyecto.demo"
-        [href]="proyecto.demo" class="text-decoration-none" target="_blank"> Aplicación Web</a>
-        </p>
-        <img [src]="proyecto.src" alt="{{proyecto.alt}}" class="img-fluid mt-3">
-      </div>
-      <!-- VER EL RESTO DE PROYECTOS -->
-      <div class="col-12 text-center mt-4">
-        <button routerLink="/proyectos" class="ver-mas">Ver todos los proyectos</button>
+        <!-- VER EL RESTO DE PROYECTOS -->
+        <div class="col-12 text-center mt-4">
+          <button routerLink="/proyectos" class="ver-mas">Ver todos los proyectos</button>
+        </div>
       </div>
     </div>
+    <ng-template #noProyectos>
+      <div class="text-center text-light p-5 lead display-6">
+        <p>No hay datos de proyectos disponibles.</p>
+      </div>
+    </ng-template>
   </div>
   <hr class="w-75 mt-5 m-auto border-3 border-white">
 </section>
