--- a/src/app/layout/layout-proyectos/layout-proyectos.component.html
+++ b/src/app/layout/layout-proyectos/layout-proyectos.component.html
@@ -4,33 +4,40 @@
     <a routerLink="/" class="volver-inicio text-decoration-none mt-3">Volver al inicio</a>
   </div>
   <div class="container">
-    <div class="row">
-      <div *ngFor="let proyecto of proyectos" class="col-lg-6 mb-5 text-light d-flex flex-column">
-        <div class="p-4 ampliar flex-grow-1 d-flex flex-column">
-          <h3 class="h1">{{proyecto.titulo}}</h3>
-          <h4 class="lead">{{proyecto.duracion}}</h4>
-          <hr>
-          <p class="lead">{{proyecto.descripcion}}</p>
-          <div class="d-flex flex-wrap mt-auto">
-            <span *ngFor="let tecnologia of proyecto.tecnologias"
-              class="badge bg-primary p-2 m-1">{{tecnologia}}</span>
-          </div>
-          <p class="lead mt-auto">
-            <i class="fab fa-github"></i> <a [href]="proyecto.repositorio[0]" class="text-decoration-none"
-              target="_blank"> Repositorio de GitHub</a>
-            <br>
-            <i *ngIf="proyecto.repositorio.length > 1" class="fab fa-github"></i>
-            <a *ngIf="proyecto.repositorio.length > 1" [href]="proyecto.repositorio[1]" class="text-decoration-none"
-              target="_blank"> Repositorio de
-              GitHub 2 <br></a>
+    <div *ngIf="proyectos && proyectos.length > 0; else noProyectos" class="w-80 m-auto text-light ">
+      <div class="row">
+        <div *ngFor="let proyecto of proyectos" class="col-lg-6 mb-5 text-light d-flex flex-column">
+          <div class="p-4 ampliar flex-grow-1 d-flex flex-column">
+            <h3 class="h1">{{proyecto.titulo}}</h3>
+            <h4 class="lead">{{proyecto.duracion}}</h4>
+            <hr>
+            <p class="lead">{{proyecto.descripcion}}</p>
+            <div class="d-flex flex-wrap mt-auto">
+              <span *ngFor="let tecnologia of proyecto.tecnologias"
+                class="badge bg-primary p-2 m-1">{{tecnologia}}</span>
+            </div>
+            <p class="lead mt-auto">
+              <i class="fab fa-github"></i> <a [href]="proyecto.repositorio[0]" class="text-decoration-none"
+                target="_blank"> Repositorio de GitHub</a>
+              <br>
+              <i *ngIf="proyecto.repositorio.length > 1" class="fab fa-github"></i>
+              <a *ngIf="proyecto.repositorio.length > 1" [href]="proyecto.repositorio[1]" class="text-decoration-none"
+                target="_blank"> Repositorio de
+                GitHub 2 <br></a>
 
-            <i *ngIf="proyecto.demo" class="fas fa-gamepad"></i> <a *ngIf="proyecto.demo" [href]="proyecto.demo"
-              class="text-decoration-none" target="_blank"> Aplicación Web</a>
-          </p>
-          <img [src]="proyecto.src" alt="{{proyecto.alt}}" class="img-fluid mt-3">
+              <i *ngIf="proyecto.demo" class="fas fa-gamepad"></i> <a *ngIf="proyecto.demo" [href]="proyecto.demo"
+                class="text-decoration-none" target="_blank"> Aplicación Web</a>
+            </p>
+            <img [src]="proyecto.src" alt="{{proyecto.alt}}" class="img-fluid mt-3">
+          </div>
         </div>
       </div>
     </div>
+    <ng-template #noProyectos>
+      <div class="text-center text-light p-5 lead display-6">
+        <p>No hay datos de proyectos disponibles.</p>
+      </div>
+    </ng-template>
   </div>
   <hr class="w-75 mt-5 m-auto border-3 border-white">
   <div class="mt-auto">
