Añadida clase de alineación centrada a los enlaces de educación y experiencia para mejorar la presentación visual.

--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -8,7 +8,7 @@
     <div *ngFor="let empresa of empresas" class="w-80 m-auto text-light">
       <div class="row mb-5">
         <div class="col-lg-3 d-flex justify-content-center align-items-center">
-          <a [href]="empresa.web" target="_blank" class="img-fluid w-50 ampliar-logo">
+          <a [href]="empresa.web" target="_blank" class="text-center img-fluid w-50 ampliar-logo ">
             <img [src]="empresa.src" [alt]="empresa.alt" class="img-fluid ampliar-logo">
           </a>
         </div>
