--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -6,7 +6,7 @@
   <div *ngIf="educaciones && educaciones.length > 0; else noEducacion" class="w-80 m-auto text-light ">
     <div *ngFor="let educacion of educaciones" class="row mb-5">
       <div class="col-lg-3 d-flex justify-content-center align-items-center">
-        <a [href]="educacion.web" target="_blank" class="img-fluid w-50 ampliar-logo">
+        <a [href]="educacion.web" target="_blank" class="text-center img-fluid w-50 ampliar-logo">
           <img [src]="educacion.src" [alt]="educacion.alt" class="img-fluid ampliar-logo">
         </a>
       </div>
