--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -8,11 +8,11 @@
     <div *ngFor="let empresa of empresas" class="w-80 m-auto text-light">
       <div class="row mb-5">
         <div class="col-lg-3 d-flex justify-content-center align-items-center">
-          <a [href]="empresa.web" target="_blank" class="text-center img-fluid w-50 ampliar-logo ">
+          <a [href]="empresa.web" target="_blank" class="text-center img-fluid w-50">
             <img [src]="empresa.src" [alt]="empresa.alt" class="img-fluid ampliar-logo">
           </a>
         </div>
-        <div class="col-lg-9 ampliar">
+        <div class="col-lg-9">
           <h3 class="h1">{{empresa.empresa}}</h3>
           <h4 class="lead">{{empresa.puesto}}</h4>
           <h4 class="lead text-secondary">{{empresa.ubicacion}}</h4>
