--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -8,13 +8,13 @@
     <!-- DOS PRIMEROS PROYECTOS -->
     <div *ngIf="proyectos && proyectos.length > 0; else noProyectos">
       <div class="row mb-5 d-flex">
-        <div *ngFor="let proyecto of proyectos.slice(0, 2)" class="col-lg-6 p-3 ampliar d-flex flex-column">
+        <div *ngFor="let proyecto of proyectos.slice(0, 2)" class="col-lg-6 p-3 d-flex flex-column">
           <h3 class="h1">{{proyecto.titulo}}</h3>
           <h4 class="lead">{{proyecto.duracion}}</h4>
           <hr>
           <p class="lead">{{proyecto.descripcion}}</p>
           <div class="d-flex flex-wrap mt-auto">
-            <span *ngFor="let tecnologia of proyecto.tecnologias" class="badge bg-primary p-2 m-1">{{tecnologia}}</span>
+            <span *ngFor="let tecnologia of proyecto.tecnologias" class="badge bg-primary p-2 m-1 ampliar">{{tecnologia}}</span>
           </div>
           <p class="lead mt-auto">
             <i class="fab fa-github"></i> <a [href]="proyecto.repositorio[0]" class="contact-link text-decoration-none"
