--- a/src/app/layout/layout-proyectos/layout-proyectos.component.html
+++ b/src/app/layout/layout-proyectos/layout-proyectos.component.html
@@ -7,14 +7,14 @@
     <div *ngIf="proyectos && proyectos.length > 0; else noProyectos">
       <div class="row">
         <div *ngFor="let proyecto of proyectos" class="col-lg-6 mb-5 text-light d-flex flex-column">
-          <div class="p-4 ampliar flex-grow-1 d-flex flex-column">
+          <div class="p-4 flex-grow-1 d-flex flex-column">
             <h3 class="h1">{{proyecto.titulo}}</h3>
             <h4 class="lead">{{proyecto.duracion}}</h4>
             <hr>
             <p class="lead">{{proyecto.descripcion}}</p>
             <div class="d-flex flex-wrap mt-auto">
               <span *ngFor="let tecnologia of proyecto.tecnologias"
-                class="badge bg-primary p-2 m-1">{{tecnologia}}</span>
+                class="badge bg-primary p-2 m-1 ampliar">{{tecnologia}}</span>
             </div>
             <p class="lead mt-auto">
               <i class="fab fa-github"></i> <a [href]="proyecto.repositorio[0]" class="text-decoration-none"
