Eliminado el componente 'volver-arriba' y su CSS, y añadido un botón en el componente principal para volver al inicio con funcionalidad de desplazamiento suave.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
     <i class="fab fa-linkedin mb-3"></i>
   </a>
 </div>
-<app-volver-arriba></app-volver-arriba>
+<button [class.visible]="isVisible" (click)="scrollToTop()" class="volver-arriba">
+  Volver arriba
+</button>
 <div class="cursor-glow" [ngStyle]="{'left.px': x, 'top.px': y}"></div>
 <div class="cursor-glow2" [ngStyle]="{'left.px': x, 'top.px': y}"></div>
