Añadidos enlaces de contacto en el encabezado para GitHub y LinkedIn, y mejorada la visibilidad en dispositivos móviles.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,16 +7,27 @@
       <h1 class="display-1">Adrián Sanz</h1>
       <h2 class="display-6">Desarrollador Full-Stack</h2>
       <h3>Madrid y alrededores, España.</h3>
-      <div class="pt-2">
+      <div class="pt-2 d-none d-lg-block">
         <p><i class="fas fa-envelope"></i> Email: <a href="mailto:sanzadrian@hotmail.es"
-            class="contact-link text-decoration-none">{{email}}</a></p>
+        class="contact-link text-decoration-none">{{email}}</a></p>
         <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/sanzadrian"
-            class="contact-link text-decoration-none" target="_blank">linkedin.com/in/sanzadrian</a></p>
-        <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/adrianssanz" class="contact-link text-decoration-none"
-            target="_blank">github.com/adrianssanz</a></p>
+        class="contact-link text-decoration-none" target="_blank">linkedin.com/in/sanzadrian</a></p>
+        <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/adrianssanz"
+        class="contact-link text-decoration-none" target="_blank">github.com/adrianssanz</a></p>
+      </div>
+      <div class="justify-content-center mt-4 gap-5 d-flex d-lg-none mb-2">
+        <a class="h1 text-light ampliar" href="mailto:sanzadrian@hotmail.es" target="_blank">
+          <i class="fas fa-envelope"></i>
+        </a>
+        <a class="h1 text-light ampliar" href="https://github.com/adrianssanz" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a class="h1 text-light ampliar-logo" href="https://www.linkedin.com/in/sanzadrian/" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
       </div>
     </div>
   </div>
   <br>
-<hr class="w-75 m-auto border-3 border-white">
+  <hr class="w-75 m-auto border-3 border-white">
 </header>
