--- a/src/styles.css
+++ b/src/styles.css
@@ -52,3 +52,39 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         border-bottom: 1px solid white;
     }
 }
+
+dialog {
+  border: none;
+  padding: 0;
+  background: transparent;
+}
+
+dialog::backdrop {
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.dialogo-contenido {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+}
+
+.dialogo-contenido img {
+  max-width: 80vw; /* 80% del ancho de la ventana */
+  max-height: 100%; /* 80% del alto de la ventana */
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: white;
+  border: none;
+  padding: 5px 10px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+}
