--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -14,7 +14,8 @@
           <hr>
           <p class="lead">{{proyecto.descripcion}}</p>
           <div class="d-flex flex-wrap mt-auto">
-            <span *ngFor="let tecnologia of proyecto.tecnologias" class="badge bg-primary p-2 m-1 ampliar">{{tecnologia}}</span>
+            <span *ngFor="let tecnologia of proyecto.tecnologias"
+              class="badge bg-primary p-2 m-1 ampliar">{{tecnologia}}</span>
           </div>
           <p class="lead mt-auto">
             <i class="fab fa-github"></i> <a [href]="proyecto.repositorio[0]" class="contact-link text-decoration-none"
@@ -25,10 +26,18 @@
               GitHub 2 <br></a>
             <i *ngIf="proyecto.demo" class="fas fa-gamepad"></i> <a *ngIf="proyecto.demo" [href]="proyecto.demo"
               class="text-decoration-none" target="_blank"> Aplicación Web</a>
-            <i *ngIf="proyecto.video" class="fa-brands fa-youtube"></i> <a *ngIf="proyecto.video" [href]="proyecto.video"
-              class="text-decoration-none" target="_blank"> Video Aplicación</a>
+            <i *ngIf="proyecto.video" class="fa-brands fa-youtube"></i> <a *ngIf="proyecto.video"
+              [href]="proyecto.video" class="text-decoration-none" target="_blank"> Video Aplicación</a>
           </p>
-          <img [src]="proyecto.src" alt="{{proyecto.alt}}" class="img-fluid mt-3 rounded-3">
+
+          <img [src]="proyecto.src" alt="{{proyecto.alt}}" class="img-fluid mt-3 rounded-3 ampliar ampliar-logo" (click)="abrirDialogo(proyecto.src)">
+
+          <dialog #dialogo>
+            <div class="dialogo-contenido">
+              <img [src]="src" alt="Imagen ampliada">
+              <button class="close-btn" (click)="cerrarDialogo()">✖</button>
+            </div>
+          </dialog>
         </div>
         <!-- VER EL RESTO DE PROYECTOS -->
         <div class="col-12 text-center mt-4">
