Modificado dialogo para cerrarse al pulsar fuera de el.

--- a/src/app/layout/layout-proyectos/layout-proyectos.component.html
+++ b/src/app/layout/layout-proyectos/layout-proyectos.component.html
@@ -32,7 +32,7 @@
             </p>
             <img [src]="proyecto.src" alt="{{proyecto.alt}}" class="img-fluid mt-3 rounded-3 ampliar-logo"
               (click)="abrirDialogo(proyecto.src)">
-            <dialog #dialogo>
+            <dialog #dialogo (click)="cerrarDialogo()">
               <div class="dialogo-contenido">
                 <img [src]="src" alt="Imagen ampliada">
                 <button class="close-btn" (click)="cerrarDialogo()">✖</button>
