--- a/src/app/components/proyectos/proyectos.component.css
+++ b/src/app/components/proyectos/proyectos.component.css
@@ -13,3 +13,24 @@
     box-shadow: 0 0 7px 3px rgba(41, 128, 185, 0.7);
     transform: translateY(-5px) scale(1.02);
 }
+
+.insignia{
+    background-color: #121d2f;
+    display: inline-block;
+    padding: 0.35em 0.65em;
+    font-size: 0.75em;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 1rem;
+    color: #3293f8;
+}
+
+.insignia:hover{
+    background-color: #1f6feb;
+    cursor:default;
+    color: white;
+}
