Añadidas clases mr y ml -3

--- a/src/styles.css
+++ b/src/styles.css
@@ -88,3 +88,11 @@ dialog::backdrop {
   cursor: pointer;
   border-radius: 5px;
 }
+
+.mr-3{
+  margin-right: 16px;
+}
+
+.ml-3{
+  margin-left: 16px;
+}
