--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,11 +25,11 @@
   z-index: 1;
 }
 
-i {
+.sidebar i {
   transition: color 0.3s ease;
 }
 
-i:hover {
+.sidebar i:hover {
   color: #2684e8;
 }
 
