--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -51,6 +51,16 @@
   transition: all 0.5s ease;
 }
 
+.idioma {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  font-size: 18px;
+  padding: 10px 20px;
+  cursor: pointer;
+  z-index: 1000;
+}
+
 .volver-arriba.visible {
   opacity: 1;
   transform: translateY(0);
