--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="row m-5 text-light">
     <div class="offset-lg-2 col-lg-8">
-      <h2 class="display-3">Educación:</h2>
+      <h2 class="display-3">{{ englishActive() ? 'Education:' : 'Educación:' }}</h2>
     </div>
   </div>
   <div *ngIf="educaciones && educaciones.length > 0; else noEducaciones" >
