--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="row m-5 text-light">
     <div class="offset-lg-2 col-lg-8">
-      <h2 class="display-3">Experiencia:</h2>
+      <h2 class="display-3">{{ englishActive() ? 'Experience:' : 'Experiencia:' }}</h2>
     </div>
   </div>
   <div *ngIf="empresas && empresas.length > 0; else noEmpresas" >
