--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,9 +4,11 @@
       <img src="./assets/perfil.jpg" alt="Adrián Sanz" class="w-50 rounded-circle">
     </div>
     <div class="col-lg-6 d-flex justify-content-center text-center flex-column p-lg-5">
-      <h1 class="display-1">Adrián Sanz</h1>
-      <h2 class="display-6">Desarrollador Full-Stack</h2>
-      <h3>Madrid y alrededores, España.</h3>
+      <div>
+        <h1 class="display-1">Adrián Sanz</h1>
+        <h2 class="display-6">{{ englishActive() ? 'Full-Stack Developer' : 'Desarrollador Full-Stack' }}</h2>
+        <h3>{{ englishActive() ? 'Madrid and the surrounding area, Spain.' : 'Madrid y alrededores, España.' }}</h3>
+      </div>
       <div class="pt-2 d-none d-lg-block">
         <p><i class="fas fa-envelope"></i> Email: <a href="mailto:sanzadrian@hotmail.es"
         class="contact-link text-decoration-none">{{email}}</a></p>
