--- a/src/app/components/tecnologias/tecnologias.component.html
+++ b/src/app/components/tecnologias/tecnologias.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="row m-5 text-light">
     <div class="offset-lg-2 col-lg-8">
-      <h2 class="display-3">Tecnologías:</h2>
+      <h2 class="display-3">{{ englishActive() ? 'Technologies:' : 'Tecnologías:'}}</h2>
     </div>
   </div>
   <div *ngIf="tecnologias && tecnologias.length > 0; else noTecnologias" class="w-80 m-auto text-light ">
