--- a/src/app/errors/error-404/error-404.component.html
+++ b/src/app/errors/error-404/error-404.component.html
@@ -1,10 +1,10 @@
 <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100vh;">
   <div class="error-container p-4">
     <h2 class="h1">Error 404</h2>
-    <h2>Página no encontrada.</h2>
+    <h2>{{ englishActive() ? 'Page not found.' : 'Página no encontrada.'}}</h2>
     <br>
     <div class="text-center m-3">
-        <a routerLink="/" class="volver-inicio text-decoration-none">Volver al inicio</a>
+        <a routerLink="/" class="volver-inicio text-decoration-none">{{ englishActive() ? 'Back to home' : 'Volver al inicio'}}</a>
     </div>
   </div>
 </div>
